upadate:adding new file and modifying it

--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,7 @@
             integrity="sha256-mmgLkCYLUQbXn0B1SRqzHar6dCnv9oZFPEC1g1cwlkk="
             crossorigin="anonymous"
         />
+        <link rel="" href="">
         <link rel="stylesheet" href="css/style.css" />
         <title>Chat App</title>
     </head>
