--- a/public/chat.html
+++ b/public/chat.html
@@ -14,33 +14,7 @@
       <a href="index.html" class="btn">Leave Room</a>
     </header>
     <main class="chat-main">
-      <div class="chat-sidebar">
-        <h3><i class="fas fa-comments"></i> Room Name:</h3>
-        <h2 id="room-name">JavaScript</h2>
-        <h3><i class="fas fa-users"></i> Users</h3>
-        <ul id="users">
-          <li>Brad</li>
-          <li>John</li>
-          <li>Mary</li>
-          <li>Paul</li>
-          <li>Mike</li>
-        </ul>
-      </div>
       <div class="chat-messages">
-<div class="message">
-<p class="meta">Brad <span>9:12pm</span></p>
-<p class="text">
-Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi,
-repudiandae.
-</p>
-</div>
-<div class="message">
-<p class="meta">Mary <span>9:15pm</span></p>
-<p class="text">
-Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi,
-repudiandae.
-</p>
-</div>
       </div>
     </main>
     <div class="chat-form-container">
@@ -61,6 +35,7 @@ repudiandae.
     integrity="sha256-TDxXjkAUay70ae/QJBEpGKkpVslXaHHayklIVglFRT4="
     crossorigin="anonymous"  
   ></script>
+  <script src="/socket.io/socket.io.js"></script>
   <script src="js/main.js"></script>
 </body>
 </html>
