modified and fixing the bug

--- a/public/chat.html
+++ b/public/chat.html
@@ -10,12 +10,12 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="css/style.css" />
-    <title>ChatCord App</title>
+    <title>Chat App</title>
   </head>
   <body>
     <div class="chat-container">
       <header class="chat-header">
-        <h1><i class="fas fa-terminal"></i> ChatCord</h1>
+        <h1><i class="fas fa-terminal"></i> command_tech</h1>
         <a id="leave-btn" class="btn">Leave Room</a>
       </header>
       <main class="chat-main">
